# shipnote

./: .gitignore  README.md  SUBMISSION.md  app.py  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/shipnote/: __init__.py  backends.py  core.py  gitlog.py  parse.py
tests/: test_shipnote.py
