[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "shipnote"
version = "0.1.0"
description = "Turn raw git commits into grouped, human-readable release notes with a suggested SemVer bump. Understands Conventional Commits, never drops history, and ships a keyless deterministic backend so it runs anywhere — plug in an LLM for prose highlights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "git",
  "changelog",
  "release-notes",
  "conventional-commits",
  "semver",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit>=1.40"]
gemini = ["google-genai>=0.3"]
anthropic = ["anthropic>=0.40"]
ollama = ["httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/shipnote"
Source = "https://github.com/MukundaKatta/shipnote"
Issues = "https://github.com/MukundaKatta/shipnote/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shipnote"]
